[package]
name = "rapi"
version = "0.1.0"
authors = ["Kjell Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1"
actix-web = "3"
actix-service = "1"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
jsonwebtoken = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
actix-web-httpauth = "0.5"
reqwest = { version = "0.10", features = ["json"] }
log="0.4"
env_logger = "0.7"
anyhow = "1.0"

[dev-dependencies]
actix-http-test = "2"
mockito="0.27"
openssl = "0.10"
